--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,6 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border: 1px solid red;
 }
 
 
@@ -45,11 +44,12 @@
 }
 
 nav{
-    width: 400px;
+    width: 500px;
     height: 80px;
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-right: 15px;
 }
 
 nav ul{
@@ -60,10 +60,6 @@ nav ul{
 
 
 nav ul li{
-    font-family: "Noto Serif", serif;
-    font-size: 16px;
-    padding: 15px 25px;
-    text-transform: capitalize;
     list-style: none;
 }
 
@@ -71,9 +67,37 @@ nav ul li{
 nav ul li a{
     text-decoration: none;
     color: grey;
+    font-family: "Noto Serif", serif;
+    font-size: 16px;
+    padding: 15px 25px;
+    text-transform: capitalize;
 }
 
 nav ul li a.active{
     color: #252432;
     font-weight: 600;
+}
+
+.cart{
+    width: 80px;
+    height: 80px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    text-align: center;
+}
+
+.cart .icon>i{
+    color: #252432;
+    font-size: 19px;
+}
+
+
+.cart p{
+    font-family: "Noto Serif", serif;
+    font-size: 16px;
+    text-transform: capitalize;
+    color: #252432;
+    padding: 8px;
 }
