--- a/styles.css
+++ b/styles.css
@@ -364,3 +364,43 @@ nav ul li a.active{
     height: auto;
     margin-left: 30px;
 }
+
+
+
+/* SECTION LAYOUT */
+.offer {
+  width: 100%;
+  height: auto;
+  padding: 60px 0;
+}
+
+.offer-top {
+  width: 100%;
+  height: 135px;
+}
+
+.title {
+  width: 650px;
+  height: 100%;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.title h1 {
+  font-family: "Noto Serif", serif;
+  font-size: 40px;
+  text-transform: capitalize;
+  word-spacing: 20px;
+  padding: 15px;
+}
+
+.title h1 span {
+  color: #e95a08;
+}
+
+.title p {
+  font-size: 19px;
+  color: grey;
+  font-weight: 400;
+}
+
