--- a/styles.css
+++ b/styles.css
@@ -585,3 +585,138 @@ nav ul li a.active{
     z-index: 1;
     text-decoration: underline;
 }
+
+
+.newsletter{
+    width: 100%;
+    height: 500px;
+    background-image: url(assets/news-letter-bg.png);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;
+}
+
+
+.main-join{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 25px;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+}
+
+
+.join-title, .input{
+    width: 750px;
+}
+
+
+.join-title{
+    text-align: center;
+}
+
+.join-title h3{
+    font-family: "Noto Serif", serif;
+    font-size: 46px;
+    text-transform: capitalize;
+    color: #ffffff;
+    font-weight: 600;
+}
+
+.input{
+    display: flex;
+}
+
+.input input{
+    width: 75%;
+    height: 45px;
+    padding: 15px;
+    /* display: flex; */
+    flex: 1;
+}
+
+
+.input button {
+    flex: none;
+    width: 120px;
+    height: 45px;
+    background-color: #e95a08;
+    color: #ffffff;
+    /* border: 1px solid #e95a08;
+    border-radius: 0 6px 6px 0; */
+    cursor: pointer;
+    text-transform: capitalize;
+    font-size: 15px;
+    font-weight: 600;
+    outline: none;
+}
+
+.footer{
+    width: 100%;
+    height: 300px;
+}
+
+
+.footer-body{
+    max-width: 1140px;
+    height: 100%;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 15px;
+    position: relative;
+}
+
+.fair-well{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.f-logo img{
+    padding: 25px 25px;
+}
+
+
+.f-logo p{
+    font-family: "Inter Tight", sans-serif;
+    font-size: 20px;
+    font-weight: 500;
+    color: grey;
+    padding: 10px 0;
+}
+
+
+.menus{
+    width: 100%;
+    height: 100%;
+    /* display: flex;
+    align-items: center;
+    justify-content: space-evenly; */
+}
+
+.menus ul{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: auto;
+    gap: 30px;
+    list-style: none;
+}
+
+
+.menus ul li{
+    font-family: "Inter Tight", sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    color: grey;
+    text-transform: capitalize;
+    margin-bottom: 12px;
+}
+
+
