--- a/styles.css
+++ b/styles.css
@@ -668,11 +668,14 @@ nav ul li a.active{
     font-size: 15px;
     font-weight: 600;
     outline: none;
+    border: none;
+    outline: none;
 }
 
 .footer{
     width: 100%;
     height: 300px;
+    padding: 25px;
 }
 
 
@@ -684,6 +687,7 @@ nav ul li a.active{
     grid-template-columns: repeat(3, 1fr);
     gap: 15px;
     position: relative;
+    
 }
 
 .fair-well{
@@ -692,10 +696,10 @@ nav ul li a.active{
     justify-content: center;
 }
 
-
+/* 
 .f-logo img{
-    padding: 25px 25px;
-}
+    padding: 25px 0;
+} */
 
 
 .f-logo p{
