--- a/styles.css
+++ b/styles.css
@@ -501,6 +501,7 @@ nav ul li a.active{
     height: 100%;
     background-color: rgba(0, 0, 0, 0.2);
     z-index: 1;
+    border-radius: 15px;
 }
 
 .grid-two{
@@ -551,6 +552,7 @@ nav ul li a.active{
     height: 100%;
     background-color: rgba(0, 0, 0, 0.2);
     z-index: 1;
+    border-radius: 15px;
 }
 
 
@@ -580,6 +582,7 @@ nav ul li a.active{
     height: 100%;
     background-color: rgba(0, 0, 0, 0.2);
     z-index: 1;
+    border-radius: 15px;
 }
 
 .child h3{
