--- a/styles.css
+++ b/styles.css
@@ -860,7 +860,7 @@ nav ul li a.active{
 
     .main{
         width: 100%;
-        height: 550px;
+        /* height: 550px; */
     }
 
 
@@ -907,7 +907,7 @@ nav ul li a.active{
 
     .shop_grid_card{
         width: 100%;
-        height: 750px;
+        /* height: 750px; */
         margin-bottom: 30px;
         display: grid;
         grid-template-columns: repeat(2, 1fr);
@@ -976,5 +976,24 @@ nav ul li a.active{
         font-weight: 600;
         font-family: "Inter Tight", sans-serif;
         cursor: pointer;
+    }
+
+    .flower_lover{
+        width: 100%;
+        /* height: 550px; */
+    }
+
+    .badge{
+        display: none;
+    }
+
+    html{
+        scroll-behavior: smooth;
+    }
+
+    .f_main{
+        width: 100%;
+        /* height: 100%; */
+        overflow: hidden;
     }
 }
