--- a/styles.css
+++ b/styles.css
@@ -755,6 +755,7 @@ nav ul li a.active{
         margin: 0;
         padding: 0;
         box-sizing: border-box;
+        border: 1px solid red;
     }
     
     
@@ -1040,4 +1041,105 @@ nav ul li a.active{
         margin-left: 30px;
     }
 
+
+    .offer{
+        width: 100%;
+    }
+
+    .offer-main{
+        width: 90%;
+        margin: 0 auto;
+    }
+
+    .offer-top{
+        width: 380px;
+        height: 120px;
+    }
+
+    .title{
+        width: 100%;
+        height: 100%;
+        text-align: center;
+    }
+
+    .title h1{
+        font-family: "Noto Seif", serif;
+        text-transform: capitalize;
+        font-size: 1.8rem;
+        padding: 10px;
+    }
+
+    .title h1 span{
+        color: #e95a08;
+    }
+
+    .title p{
+        font-family: "Inter Tight", sans-serif;
+        font-size: 13px;
+        color: grey;
+        font-weight: 400;
+        text-transform: capitalize;
+        padding: 13px;
+        margin-bottom: 10px;
+    }
+
+
+    .offer-grid{
+        width: 400px;
+    }
+
+
+    .master{
+        width: 100%;
+        height: 100%;
+        display: grid;
+        grid-template-rows: repeat(2, 1fr);
+        gap: 15px;
+        padding: 15px;
+    }
+
+    .grid-one{
+        width: 100%;
+        height: 200px;
+        background-image: url(assets/deal-bloom.png);
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        border-radius: 15px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .grid-two{
+        width: 100%;
+        height: 200px;
+        background-image: url(assets/deal-ana.png);
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        border-radius: 15px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .child{
+        width: 100%;
+        height: 200px;
+        background-image: url(assets/deal-zabo.png);
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        border-radius: 15px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        gap: 10px;
+    }
 }
