--- a/styles.css
+++ b/styles.css
@@ -1221,4 +1221,134 @@ nav ul li a.active{
         z-index: 1;
         border-radius: 15px;
     }
+
+    .newsletter{
+        width: 100%;
+        height: 300px;
+        background-image: url(assets/news-letter-bg.png);
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+        margin-top: 15px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
+
+
+    .join-title{
+        width: 400px;
+        text-align: center;
+    }
+
+    .join-title h3 {
+        font-size: 1.5rem;
+        padding: 10px;
+        text-transform: capitalize;
+        color: #fff;
+    }
+
+    .input {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        max-width: 100%;
+    }
+
+    .input input {
+        flex-grow: 1;
+        height: 45px;
+        font-size: 1rem;
+        padding: 10px 15px;
+        width: 200px;
+        max-width: 100%;
+        box-sizing: border-box;
+    }
+
+    .input button {
+        height: 45px;
+        font-size: 0.95rem;
+        padding: 0 15px;
+        white-space: nowrap;
+        flex-shrink: 0;
+        background-color:#e95a08;
+        color: #fff;
+        text-transform: capitalize;
+        font-weight: 600;
+    }
+
+    .footer{
+        width: 100%;
+        height: 900px;
+    }
+
+    .footer-body{
+        width: 100%;
+        height: 100%;
+        display: grid;
+        grid-template-rows: repeat(3, 1fr);
+        gap: 10px;
+        padding: 15px;
+    }
+
+    .f-logo{
+        width: 100%;
+        height: 160px;
+        padding: 15px 0;
+    }
+
+    .f-logo p{
+        font-family: "Inter Tight", sans-serif;
+        font-size: 1.0rem;
+        text-transform: capitalize;
+        color: grey;
+        font-weight: 500;
+        padding: 10px 0;
+    }
+
+
+    .important-links{
+        height: 500px;
+    }
+
+    .menus{
+        height: 300px;
+    }
+
+
+    .menus ul {
+        display: block;
+    }
+
+    .menus ul li{
+        list-style: none;
+        text-transform: capitalize;
+        font-family: "Inter Tight", sans-serif;
+        padding: 13px 0;
+        font-weight: 400;
+        color: grey
+    }
+
+
+    .social-links{
+        width: 100%;
+        height: 60px;
+    }
+
+    .s-main{
+        width: 100%;
+        height: 100%;
+    }
+
+    .s-grid{
+        display: grid;
+        grid-template-columns: 50px 50px 50px 50px;
+    }
+
+    .s-1{
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+    }
 }
