--- a/styles.css
+++ b/styles.css
@@ -755,7 +755,6 @@ nav ul li a.active{
         margin: 0;
         padding: 0;
         box-sizing: border-box;
-        border: 1px solid red;
     }
     
     
@@ -1276,6 +1275,8 @@ nav ul li a.active{
         color: #fff;
         text-transform: capitalize;
         font-weight: 600;
+        border: none;
+        outline: none;
     }
 
     .footer{
