--- a/styles.css
+++ b/styles.css
@@ -854,7 +854,7 @@ nav ul li a.active{
         grid-template-columns: repeat(2, 1fr);
         gap: 5px;
         padding: 12px;
-        border: 1px solid red;
+        /* border: 1px solid red; */
         height: 100%;
     }
 
@@ -873,10 +873,85 @@ nav ul li a.active{
     }
 
     .flower_lover{
-        height: 100%;
+        height: 980px;
+        width: 100%;
+        /* border: 1px solid red; */
+        overflow: hidden;
     }
 
     .brawl{
         flex-direction: column;
+        height: 100%;
     }
+
+    .img_container{
+        width: 100%;
+        height: 500px;
+        padding: 5px;
+    }
+
+    .img_container img{
+        width: 425px;
+        height: 400px;
+    }
+
+    .offer{
+        width: 100%;
+        height: 100%;
+    }
+
+    .right_title h3{
+        font-size: 1.8rem;
+        padding: 10px 8px;
+    }
+
+    .right_para ul li{
+        font-size: 0.9rem;
+    }
+
+    .offer-top{
+        height: 100%;
+    }
+
+    .title{
+        width: 100%;
+    }
+
+    .offer-card {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        margin-top: 30px;
+    }
+
+    .grid-one,
+    .grid-two,
+    .child {
+        width: 100%;
+        height: 200px;
+        border-radius: 15px;
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        color: white;
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .grid-one {
+        background-image: url('assets/deal-bloom.png');
+    }
+
+    .grid-two {
+        background-image: url('assets/deal-ana.png');
+    }
+
+    .child {
+        background-image: url('assets/deal-zabo.png');
+    }
+
+
 }
