--- a/styles.css
+++ b/styles.css
@@ -739,19 +739,19 @@ nav ul li a.active{
     width: 100%;
     height: 100%;
     display: flex;
-    justify-content: space-evenly;
 }
 
 .s-1{
     width: 50px;
     height: 50px;
-    border-radius: 50%;
     overflow: hidden;
+    margin-right: 10px;
 }
 
 .s-1 img{
     width: 100%;
     height: 100%;
+
 }
 
 
@@ -954,4 +954,56 @@ nav ul li a.active{
     }
 
 
+    .main-join {
+        width: 100%;
+        padding: 0 20px;
+        gap: 20px;
+        transform: translate(-50%, -50%);
+        top: 50%;
+        left: 50%;
+    }
+
+    .join-title,
+    .input {
+        width: 100%;
+    }
+
+    .join-title h3 {
+        font-size: 28px;
+        line-height: 1.3;
+    }
+
+    .input input,
+    .input {
+        width: 100%;
+        height: 50px;
+        font-size: 14px;
+    }
+
+    .input button {
+        font-size: 14px;
+        font-weight: 600;
+        height: 50px;
+    }
+
+
+    .footer{
+        width: 100%;
+        height: 100%;
+    }
+
+    .footer-body{
+        display: flex;
+        flex-direction: column;
+    }
+
+
+    .menus ul{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .s-grid{
+        margin-left: 0px;
+    }
 }
