--- a/styles.css
+++ b/styles.css
@@ -780,7 +780,7 @@ nav ul li a.active{
 
     .logo{
         width: 100px;
-        height: 100%
+        height: 100%;
     }
 
     .logo img{
@@ -826,12 +826,13 @@ nav ul li a.active{
 
     .banner_title .title_head h1{
         font-size: 1.7rem;
-        padding: 15px 0;
+        padding: 15px 10px;
     }
 
 
     .banner_title .title_head p{
         font-size: 0.8rem;
+        padding: 15px 10px;
     }
 
     .main{
