--- a/styles.css
+++ b/styles.css
@@ -433,13 +433,13 @@ nav ul li a.active{
 
 
 .offer-card{
-    max-width: 95%;
+    max-width: 100%;
     max-height: 100%;
     margin: 0 auto;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 10px;
-    margin-top: 20px;
+    display: flex;
+    /* grid-template-columns: repeat(2, 1fr); */
+    /* gap: 10px; */
+    margin-top:  15px;
 }
 
 
@@ -448,7 +448,7 @@ nav ul li a.active{
     height: 100%;
     display: grid;
     grid-template-rows: repeat(2, 1fr);
-    gap: 10px;
+    gap: 15px;
 }
 
 
@@ -917,12 +917,16 @@ nav ul li a.active{
     .title{
         width: 100%;
     }
+    
+    .master{
+        width: 100%;
+    }
 
     .offer-card {
         display: flex;
         flex-direction: column;
-        gap: 20px;
-        margin-top: 30px;
+        gap: 15px;
+        margin: 20px;
     }
 
     .grid-one,
